{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "MechControls",
            "id": "323c9567-0147-4e0d-9bb7-6bc8612bbe77",
            "actions": [
                {
                    "name": "LateralMove",
                    "type": "Value",
                    "id": "169d37d2-0f67-4768-bea0-1e943d83ca62",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Aim",
                    "type": "Value",
                    "id": "44d48b31-cb65-42a3-885a-79733213413c",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "26d91024-8769-4929-8403-0b86cd85e9ba",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "LeftMainWeaponFire",
                    "type": "Button",
                    "id": "9acf0e7a-37b6-4f48-a4dc-570212338a42",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "LeftMainWeaponReload",
                    "type": "Button",
                    "id": "1e38d953-d8a6-4d81-8e83-c51d33e8e072",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RightMainWeaponFire",
                    "type": "Button",
                    "id": "cc82975b-d38e-4009-8bda-9250fb29ddb5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RightMainWeaponReload",
                    "type": "Button",
                    "id": "32240c02-7dfa-4358-a4aa-23bb741c7ccd",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "UseEquipmentOne",
                    "type": "Button",
                    "id": "a0b1c0dd-53dc-481e-bd0d-60b43eb487b2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "UseEquipmentTwo",
                    "type": "Button",
                    "id": "fe6881bb-a5aa-428f-8917-3f8b7ab877e7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ToggleStrafeThrusters",
                    "type": "Button",
                    "id": "481cf499-1afd-437d-9d68-b172114e48b2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ToggleTargetFocus",
                    "type": "Button",
                    "id": "2ecad43b-c2cc-47b5-a087-3e490ef71cb6",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Melee",
                    "type": "Button",
                    "id": "8534e52b-3faa-4e90-a07c-ca9744b14a39",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "065417e3-5e1a-4e86-ba45-1b283be1db84",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LateralMove",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ed406062-5af0-405b-ad45-5241b2621d80",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "53d17643-1fae-4f5e-a626-c26b0acc673f",
                    "path": "<Gamepad>/leftTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftMainWeaponFire",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "dedd6a2e-d4c6-48b9-81df-3d9fcf56b59e",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftMainWeaponReload",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3ffdb28a-f13f-4468-827e-fa05cb044274",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightMainWeaponFire",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "63337b1e-029d-4ac8-8251-b3257018423a",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightMainWeaponReload",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0cb30858-1b75-451c-bd28-de514a41af50",
                    "path": "<Gamepad>/leftShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "UseEquipmentOne",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0f289f7a-8e02-4962-be07-2e092f60cfa9",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Aim",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "94e0ad6c-3f63-4f82-91c6-30812616463f",
                    "path": "<Gamepad>/rightShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "UseEquipmentTwo",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7fc3d87e-245c-4735-8818-c96a5f278079",
                    "path": "<Gamepad>/leftStickPress",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ToggleStrafeThrusters",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0179a7a1-6e58-4fc0-925e-60d8bcb8d38a",
                    "path": "<Gamepad>/rightStickPress",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ToggleTargetFocus",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "603d5626-8f33-4e2e-bc05-8434131a0c4e",
                    "path": "<Gamepad>/buttonNorth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Melee",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "PersistentControls",
            "id": "a57cce2b-e711-4cb0-b6bf-60040ef492ef",
            "actions": [
                {
                    "name": "Pause",
                    "type": "Button",
                    "id": "a9e0c90f-4932-48bb-acc0-1603e4ac43a3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ToggleInfo",
                    "type": "Button",
                    "id": "ad630f99-59ae-4560-acdd-33b5bd0fbea2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "13651fab-7599-4510-b630-472e517c047b",
                    "path": "<Gamepad>/start",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pause",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "31a9821a-8af7-4454-8473-00df40717b4c",
                    "path": "<Gamepad>/select",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ToggleInfo",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}